# W3BSP1D3R

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  W3BSP1D3R.bat  W3BSP1D3R.sh  gui.py  install.sh  main.py  pyproject.toml  q_report.json  q_report.md
.github/workflows/: ci.yml  release.yml
scanner/: api.py  config.py  core.py  crawler.py
scanner/reporting/: html_report.py  markdown_report.py  models.py  pdf_report.py  sarif_report.py
scanner/testers/: base.py  clickjacking.py  cmdi.py  dir_discovery.py  dom_xss.py  headers.py  http_methods.py  info_disclosure.py  jwt_test.py  open_redirect.py  rate_limit.py  sensitive_files.py  sqli.py  ssl_tls.py  tech_fingerprint.py  xss.py  xxe.py
scanner/utils/: display.py  http.py  renderer.py
tests/: test_accuracy.py  test_enterprise.py  test_enterprise_phase3.py  test_isolation.py  vulnerable_app.py
